<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_menu_track"
            android:title="@string/menu_track" />
        <item
            android:id="@+id/nav_remind"
            android:icon="@drawable/ic_menu_remind"
            android:title="@string/menu_remind" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_todo"
            android:title="@string/menu_todo" />
        <item
            android:icon="@drawable/ic_menu_import_export"
            android:title="@string/menu_import_export" />
        <item
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>