<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.track.area.record.entry.EntryFragment">

    <TextView
        android:id="@+id/text_track_area_record_entry_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordEntry"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_track_area_record_entry_modify_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_track_area_record_entry_modify"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/text_track_area_record_entry_modify_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/entry_value"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_track_area_record_entry_modify_parameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card_track_area_record_entry_modify_value"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/text_track_area_record_entry_modify_parameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/entry_parameter"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_track_area_record_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_track_area_record_entry_modify_parameter" />

</androidx.constraintlayout.widget.ConstraintLayout>