<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.track.area.parameter.ParameterFragment">

    <TextView
        android:id="@+id/text_track_area_parameter_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_track_area_parameter_modify_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_track_area_parameter_modify">

        <EditText
            android:id="@+id/text_track_area_parameter_modify_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/parameter_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_track_area_parameter_modify_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card_track_area_parameter_modify_name">

        <EditText
            android:id="@+id/text_track_area_parameter_modify_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/parameter_unit"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_track_area_parameter_modify_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Value type: "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_track_area_parameter_modify_unit" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_track_area_parameter_modify_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/text_track_area_parameter_modify_type_label"
        app:layout_constraintTop_toBottomOf="@+id/text_track_area_parameter_modify_type_label">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_track_area_parameter_modify_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

        </androidx.appcompat.widget.AppCompatSpinner>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_track_area_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_track_area_parameter_modify_type" />

</androidx.constraintlayout.widget.ConstraintLayout>